src/test/resources/invalid/typecheck/If_NotBoolean.vas
class Main is
    this() is
        if 42 then
        end
    end
end